--- a/styless.css
+++ b/styless.css
@@ -20,6 +20,10 @@
     padding-block-end: 3px;
     width: 100px;
 }
+.mybtn{
+    width: 105px;
+    height: 70px;
+}
 .nav-buttons{
     width: 100%;
     margin: 5px;
